kustomize/apps/subsonic/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: subsonic
  namespace: subsonic
spec:
  ingressClassName: nginx
  rules:
    - host: musiclib.hbvu.local
      http:
        paths:
          - path: /           
            pathType: Prefix
            backend:
              service:
                name: subsonic-service
                port:
                  number: 4040
